<resources>
    <string name="app_name">KExampleMaterialMVVMFragments</string>
    <string name="fist_fragment">First fragment</string>
    <string name="btn_edit_text">EditText</string>
    <string name="btn_bottom_sheet">BottomSheet</string>

    <string name="hint_outlined_box">OutlinedBox</string>
    <string name="hint_filled_box">FilledBox</string>
    <string name="hint">hint(Label) -подсказка</string>
    <string name="placeholder_text">5 characters maximum</string>
    <string name="helper_text_1">Supporting text</string>
<!--    <string name="helper_text_1">helperText - вспомогательный: \n-->
<!--        в InputLayout - endIconMode=\"password_toggle\"\n-->
<!--        в EditText - inputType=\"textPassword\"\n-->
<!--        counterEnabled="true", counterMaxLength="20" - при превышении обод меняет цвет-->
<!--    </string>-->
    <string name="helper_text_2">"endIconCheckable=\"true\", endIconDrawable=\"@drawable/ic_wikipedia\"\nendIconMode=\"custom\" - иконка видна сразу"</string>
    <string name="helper_text_3">endIconMode=\"clear_text\" - т.е. иконку сразу не видно, возникает когда текст набираешь</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="choice_group_hint">RadioButton analog  singleSelection=\"true\"</string>
    <string name="chip_group_hint">тут с прокруткой HorizontalScrollView (можно singleLine=\"true\", но без прокрутки)</string>
    <string name="click_to_try">Click to try</string>
    <string name="default_chip">Default chip</string>
    <string name="entry_chip">Entry chip</string>
    <string name="choice_chip">Choice chip</string>
    <string name="action_chip">Action chip</string>
    <string name="filter_chip">Filter chip</string>
    <string name="title_different_types_chips">Different types</string>
    <string name="title_different_recolors_chips">Different colors and others</string>
    <string name="normal_text_on_background">Normal text on Background fills room here.</string>
    <string name="top_app_bar">Top App Bar</string>
    <string name="change_theme_button">Change!</string>
    <string name="text_button">Text button</string>
    <string name="outlined_button">Outlined button</string>
    <string name="btn_buttons">Buttons</string>
    <string name="btn_bottom_app_bar">BottomAppBar</string>
    <string name="btn_chips">Chips</string>
    <string name="btn_themes">Themes</string>
    <string name="btn_typography">Typography</string>
    <string name="btn_nav_bar">NavigationBar</string>
    <string name="hello">Hello</string>
    <string name="headline1">Headline1: Light, 96sp, Sentence</string>
    <string name="headline2">Headline2: Light, 60sp, Sentence</string>
    <string name="headline3">Headline3: Regular, 48sp, Sentence</string>
    <string name="headline4">Headline4: Regular, 34sp, Sentence</string>
    <string name="headline5">Headline5: Regular, 24sp, Sentence</string>
    <string name="headline6">Headline6: Medium, 20sp, Sentence</string>
    <string name="subtitle1">Subtitle1: Regular, 16sp, Sentence (!!!!!!!!!!!  =Body1   !!!!!!!!!!)</string>
    <string name="subtitle2">Subtitle2: Medium, 14sp, Sentence</string>
    <string name="body1">Body1: Regular, 16sp, Sentence (!!!!!!!!!!!  =Subtitle1   !!!!!!!!!!)</string>
    <string name="body2">Body2: Regular, 14sp, Sentence</string>
    <string name="button">Button: Medium, 14sp, All Caps</string>
    <string name="caption">Caption: Regular, 12sp, Sentence</string>
    <string name="overline">Overline: Regular, 10sp, All Caps</string>
    <string name="btn_rv">RecycleView</string>
    <string name="content_description_media">no description media</string>
    <string name="title">no title</string>
    <string name="buttons">Buttons</string>
    <string name="edit_text">Text Fields</string>
    <string name="bottom_sheet">Bottom Sheet</string>
    <string name="bottom_app_bar">Bottom App Bar</string>
    <string name="chips">Chips</string>
    <string name="tabs">Tabs</string>
    <string name="bottom_navigation">Bottom Navigation Bar</string>
    <string name="recycle_view">Recycle View</string>
    <string name="typography">Typography</string>
    <string name="themes">Themes</string>
    <string name="constrained_layout">Constrained Layout</string>
    <string name="selection_controls">Selection Controls</string>
    <string name="label_mars">Mars</string>
    <string name="label_luna">Luna</string>
    <string name="label_saturn">Saturn</string>
    <string name="label_sun">Sun</string>
    <string name="switch_1">Switch 1</string>
    <string name="switch_2">Switch 2</string>
    <string name="switch_3">Switch 3</string>
    <string name="animation">Animation</string>
    <string name="content_one">Content One</string>
    <string name="content_two">Content Two</string>
    <string name="content_three">Content Three</string>
    <string name="heading_title_pod">Appbar Title</string>
    <string name="heading_title_solar">no text yet</string>
    <string name="long_text">The Milky Way is the galaxy that includes our Solar System, with the name describing the galaxy\'s appearance from Earth: a hazy band of light seen in the night sky formed from stars that cannot be individually distinguished by the naked eye. The term Milky Way is a translation of the Latin via lactea, from the Greek γαλακτικός κύκλος (galaktikos kýklos), meaning \"milky circle.\" From Earth, the Milky Way appears as a band because its disk-shaped structure is viewed from within. Galileo Galilei first resolved the band of light into individual stars with his telescope in 1610. Until the early 1920s, most astronomers thought that the Milky Way contained all the stars in the Universe. Following the 1920 Great Debate between the astronomers Harlow Shapley and Heber Curtis, observations by Edwin Hubble showed that the Milky Way is just one of many galaxies.  The Milky Way is a barred spiral galaxy with an estimated visible diameter of 100,000–200,000 light-years, but only about 1000 light years thick at the spiral arms (more at the boulge). Recent simulations suggest that a dark matter area, also containing some visible stars, may extend up to a diameter of almost 2 million light-years. The Milky Way has several satellite galaxies and is part of the Local Group of galaxies, which form part of the Virgo Supercluster, which is itself a component of the Laniakea Supercluster.  It is estimated to contain 100–400 billion stars and at least that number of planets. The Solar System is located at a radius of about 27,000 light-years from the Galactic Center, on the inner edge of the Orion Arm, one of the spiral-shaped concentrations of gas and dust. The stars in the innermost 10,000 light-years form a bulge and one or more bars that radiate from the bulge. The galactic center is an intense radio source known as Sagittarius A*, a supermassive black hole of 4.100 (± 0.034) million solar masses. Stars and gases at a wide range of distances from the Galactic Center orbit at approximately 220 kilometers per second. The constant rotational speed appears to contradict the laws of Keplerian dynamics and suggests that much (about 90%) of the mass of the Milky Way is invisible to telescopes, neither emitting nor absorbing electromagnetic radiation. This conjectural mass has been termed \"dark matter\". The rotational period is about 240 million years at the radius of the Sun.  The Milky Way as a whole is moving at a velocity of approximately 600 km per second with respect to extragalactic frames of reference. The oldest stars in the Milky Way are nearly as old as the Universe itself and thus probably formed shortly after the Dark Ages of the Big Bang. On 12 May 2022, astronomers announced the image, for the first time, of Sagittarius A*, the supermassive black hole at the center of the Milky Way galaxy.[</string>
    <string name="elevated_button">Elevated button</string>
    <string name="filled_button">Filled button</string>
    <string name="press_button">Press</string>
    <string name="filled_tonal_button">Filled tonal button</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="multi_selected">Multi Selected</string>
    <string name="single_selected">Single Selected</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="floating_ext_action_button">Floating Extended Action Button</string>
    <string name="fab_add_item">Add item</string>
    <string name="password_field">Password field</string>
    <string name="simple_field">Simple outlined field</string>
    <string name="simple_filled_field">Simple filled field</string>
    <string name="limited_characters">Limited characters</string>
    <string name="pickles">Pickles</string>
    <string name="tomato">Tomato</string>
    <string name="lettuce">Lettuce</string>
    <string name="cheese">Cheese</string>
    <string name="some_text">some text</string>

    //adds from astro
    <string name="holder_some_n">\n \n \n \n</string>
    <string name="_08_08_2022">08.08.2022</string>
    <string name="_08_48">08:48</string>
    <string name="_9_5">9.5</string>
    <string name="information_1_data">information 1: data\ninformation 2: data\ninformation 3: data\ninformation 4: data\ninformation 5: data</string>
    <string name="cyan">Cyan</string>
    <string name="green">Green</string>
    <string name="brown">Brown</string>
    <string name="yellow">Yellow</string>
    <string name="please_select_the_theme">Please select the theme</string>
    <string name="components_examples">Components examples</string>
    <string name="screen_1">Screen 1</string>
    <string name="screen_2">Screen 2</string>
    <string name="credits">Credits</string>
    <string name="credits_text">
        Version 1.1\n
        Created by Igor Semenov\n
        Copyright 2022 Igor Semenov
    </string>
    <string name="no_description">no description</string>
    <string name="go">Go</string>
    <string name="this_is_bottom_navigation_bar">This is Bottom Navigation Bar</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="card">Card</string>
    <string name="outlined_box">Outlined Box</string>
    <string name="filled_box">Filled Box</string>
    <string name="radio_button">Radio Button</string>
    <string name="checkbox">Checkbox</string>
    <string name="checked_chip">Checked chip</string>
    <string name="uncheckable">Uncheckable</string>
    <string name="unchecked">Unchecked</string>

</resources>