<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFragmentButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_buttons"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnFragmentEditText"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFragmentEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit_text"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/btnFragmentButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnFragmentBottomSheet"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFragmentBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_bottom_sheet"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/btnFragmentEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnFragmentBottomAppBar"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFragmentBottomAppBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_bottom_app_bar"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/btnFragmentBottomSheet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnFragmentChips"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFragmentChips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_chips"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/btnFragmentBottomAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnFragmentNavBar"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFragmentNavBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_nav_bar"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/btnFragmentChips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btnFragmentRV"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFragmentRV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rv"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/btnFragmentNavBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="btnFragmentNavBar, btnFragmentNavBar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFragmentThemes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_themes"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/barrier7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnFragmentTypography"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFragmentTypography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_typography"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@id/btnFragmentThemes"
        app:layout_constraintStart_toStartOf="@id/barrier7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>