<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.edittext.TextFieldFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"

        android:hint="@string/hint_filled_box"
        app:placeholderText="@string/placeholder_text"
        app:helperText="@string/helper_text_2"
        app:counterEnabled="true"
        app:counterMaxLength="4"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout"

        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_wikipedia"
        app:endIconMode="custom"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_modify_small"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:contentDescription="no description"
        android:text="Modify"
        android:textAlignment="center"
        />
<!--        android:src="@drawable/ic_plus_fab"-->



</androidx.coordinatorlayout.widget.CoordinatorLayout>