<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewToScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimaryVariant"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:scrimAnimationDuration="250"
            app:title="@string/heading_title_pod"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/heading_title_solar"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/rv_radio"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_bottom"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                app:title="@string/heading_title_pod" />

<!--            To change title -->
<!--            toolbarLayout.title = apodResponse.title-->
<!--            toolbarLayout.setExpandedTitleTextAppearance(R.style.ExpandedAppBar)-->
<!--            toolbarLayout.setCollapsedTitleTextAppearance(R.style.CollapsedAppBar)-->

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
<!--        Important for content below appbar-->
<!--        app:layout_behavior="@string/appbar_scrolling_view_behavior">-->

    <androidx.core.widget.NestedScrollView
        android:id="@+id/viewToScroll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_date_apod"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/step_top_heading"
            android:text="@string/long_text" />

    </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>